--- a/assets2/index.css
+++ b/assets2/index.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image:url(assets/backgroundimg2.jpeg) ;
+    background-image:url(assets2/backgroundimg2.jpeg) ;
   }
   
   header {
