--- a/assets2/index.css
+++ b/assets2/index.css
@@ -13,3 +13,22 @@ body {
     justify-content: space-between;
     align-items: center;
   }
+  name{
+    font-size: 30px;
+    font-weight: bold;
+    color: rgb(245, 245, 245);
+    background-color: #333;
+
+  }
+  img{
+    width: 25vw;
+  }
+  card{
+    width: 25vw;
+    height: 25vw;
+    border-radius: 10px;
+    background-color: rgb(48, 120, 202);
+    margin: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
